--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EventPlanner"
+
         tools:targetApi="31"
         android:name=".MyApp">
         <activity
@@ -23,6 +24,17 @@
         </activity>
         <activity android:name=".SettingsActivity" />
         <activity android:name=".EventFormActivity" />
+        <activity android:name=".EventDetailActivity" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id"/>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/maps_api_key"/>
+
+
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
